--- a/deliverables/pike/ovsdbapp.yaml
+++ b/deliverables/pike/ovsdbapp.yaml
@@ -28,6 +28,10 @@ releases:
     projects:
       - repo: openstack/ovsdbapp
         hash: e5ded80fe579d967642ee9173874ba924395d3af
+  - version: 0.4.3
+    projects:
+      - repo: openstack/ovsdbapp
+        hash: ab6e1fee0c04d3adfb6f3813f1ce116d89193aad
 branches:
   - name: stable/pike
     location: 0.4.0
