--- a/deliverables/rocky/os-brick.yaml
+++ b/deliverables/rocky/os-brick.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 296887a59ef7913a857d3142cc801b347f2e6584
         repo: openstack/os-brick
     version: 2.4.0
+  - projects:
+      - hash: 6545454c7efa8df94900000ace4894eefb1e5488
+        repo: openstack/os-brick
+    version: 2.5.0
