--- a/deliverables/rocky/keystoneauth.yaml
+++ b/deliverables/rocky/keystoneauth.yaml
@@ -23,6 +23,11 @@ releases:
         repo: openstack/keystoneauth
         tarball-base: keystoneauth1
     version: 3.6.2
+  - projects:
+      - hash: db5aa8b3aee6d46a105fe62ef504aff92dc96318
+        repo: openstack/keystoneauth
+        tarball-base: keystoneauth1
+    version: 3.7.0
 team: keystone
 type: library
 repository-settings:
