--- a/deliverables/queens/mistral.yaml
+++ b/deliverables/queens/mistral.yaml
@@ -58,6 +58,10 @@ releases:
       - hash: 3e4cabce393bfe759ead6975dc29d581654ee676
         repo: openstack/mistral
     version: 6.0.2
+  - projects:
+      - hash: 72f1ddebb4bec021bc0551a01d885444b4139be0
+        repo: openstack/mistral
+    version: 6.0.3
 repository-settings:
   openstack/mistral: {}
   openstack/mistral-dashboard: {}
