--- a/deliverables/_independent/pymod2pkg.yaml
+++ b/deliverables/_independent/pymod2pkg.yaml
@@ -128,5 +128,9 @@ releases:
       - hash: d7191fb364f14c0bd204a281443b1fd81efcb04d
         repo: openstack/pymod2pkg
     version: 0.13.2
+  - projects:
+      - hash: d51a548489d209aec3d41b9e349da4ed835a4a37
+        repo: openstack/pymod2pkg
+    version: 0.13.3
 repository-settings:
-  openstack/pymod2mkg: {}
+  openstack/pymod2pkg: {}
