TripleO newton release
Note: this is the last tag number before we EOL Newton.

Change-Id: Icbac25bf159a1eff63a3ecbb2b44bd502b6907c1

--- a/deliverables/newton/instack-undercloud.yaml
+++ b/deliverables/newton/instack-undercloud.yaml
@@ -83,6 +83,10 @@ releases:
       - hash: a48f3a8ed653b1c307b774c868044be1c614a901
         repo: openstack/instack-undercloud
     version: 5.3.9
+  - projects:
+      - hash: 74ad204741adbe5c807aec2f7c8eacbfb51637f3
+        repo: openstack/instack-undercloud
+    version: 5.3.10
 team: tripleo
 type: other
 repository-settings:
