--- a/deliverables/newton/os-net-config.yaml
+++ b/deliverables/newton/os-net-config.yaml
@@ -51,6 +51,10 @@ releases:
       - hash: 91e3ac46ef7976a06c8cc6572ef6591f0e733f16
         repo: openstack/os-net-config
     version: 5.2.4
+  - projects:
+      - hash: 3930b393e071760ff284055102efd843e82647ba
+        repo: openstack/os-net-config
+    version: 5.2.5
 team: tripleo
 type: other
 repository-settings:
