--- a/deliverables/newton/puppet-tripleo.yaml
+++ b/deliverables/newton/puppet-tripleo.yaml
@@ -85,6 +85,10 @@ releases:
       - hash: 939e0375a12afc4c07936c18b6e2b4901ff86a06
         repo: openstack/puppet-tripleo
     version: 5.6.10
+  - projects:
+      - hash: 95c442e1d044d627e402c7bfbbe093763ec96b66
+        repo: openstack/puppet-tripleo
+    version: 5.6.11
 team: tripleo
 type: other
 repository-settings:
