--- a/deliverables/newton/tripleo-common.yaml
+++ b/deliverables/newton/tripleo-common.yaml
@@ -66,6 +66,10 @@ releases:
       - hash: eac08f6caebefd9ac3f7c956e501a562d0f19624
         repo: openstack/tripleo-common
     version: 5.4.8
+  - projects:
+      - hash: ac5e3fc860fbbde41a347bf2fe55838228e6dc88
+        repo: openstack/tripleo-common
+    version: 5.4.9
 team: tripleo
 type: library
 repository-settings:
