--- a/deliverables/newton/tripleo-heat-templates.yaml
+++ b/deliverables/newton/tripleo-heat-templates.yaml
@@ -95,6 +95,10 @@ releases:
       - hash: 361f20ebda91f1ee34671e83f156aba466fbaa27
         repo: openstack/tripleo-heat-templates
     version: 5.3.12
+  - projects:
+      - hash: 4764a847f71fb2226668ff9cff2c92c23f6a90a7
+        repo: openstack/tripleo-heat-templates
+    version: 5.3.13
 team: tripleo
 type: other
 repository-settings:
