TripleO ocata release
Change-Id: Ic2c2eabba367ea9335cf5e6a1c2158fdaf7599e8

--- a/deliverables/ocata/puppet-tripleo.yaml
+++ b/deliverables/ocata/puppet-tripleo.yaml
@@ -78,6 +78,10 @@ releases:
       - hash: 40c327a6bc38b9f7922d8292b1993e2ebec61b59
         repo: openstack/puppet-tripleo
     version: 6.5.12
+  - projects:
+      - hash: 29f726588f241008442f5148ae2693672a2f4f36
+        repo: openstack/puppet-tripleo
+    version: 6.5.13
 team: tripleo
 type: other
 repository-settings:
