--- a/deliverables/ocata/python-tripleoclient.yaml
+++ b/deliverables/ocata/python-tripleoclient.yaml
@@ -47,6 +47,10 @@ releases:
       - hash: 5c653fc49ef1fbf981f4f7933f4fe6ad0391efea
         repo: openstack/python-tripleoclient
     version: 6.2.4
+  - projects:
+      - hash: b13c81765886b7c6a86d0548c66661fd3293917a
+        repo: openstack/python-tripleoclient
+    version: 6.2.5
 team: tripleo
 type: library
 repository-settings:
