--- a/deliverables/ocata/tripleo-common.yaml
+++ b/deliverables/ocata/tripleo-common.yaml
@@ -55,6 +55,10 @@ releases:
       - hash: da974e0208359d10bcdfc78ea7502500818b87e6
         repo: openstack/tripleo-common
     version: 6.1.6
+  - projects:
+      - hash: 9a29b4d052ef487b057a3c8ffeea0bb5d7faf229
+        repo: openstack/tripleo-common
+    version: 6.1.7
 team: tripleo
 type: other
 repository-settings:
