--- a/deliverables/ocata/tripleo-heat-templates.yaml
+++ b/deliverables/ocata/tripleo-heat-templates.yaml
@@ -88,6 +88,10 @@ releases:
       - hash: de86346b73577025e5a416dfd423e3aae2e16e41
         repo: openstack/tripleo-heat-templates
     version: 6.2.13
+  - projects:
+      - hash: 57b81654f7cae989d8dcacf1e87901e041744b19
+        repo: openstack/tripleo-heat-templates
+    version: 6.2.14
 team: tripleo
 type: other
 repository-settings:
