TripleO pike release
Change-Id: I2cd65bb79e7c8eb299950427348c4e37dd51e988

--- a/deliverables/pike/instack-undercloud.yaml
+++ b/deliverables/pike/instack-undercloud.yaml
@@ -74,6 +74,10 @@ releases:
       - hash: c95254293b8068057c42ddae8b45eadec87c5f70
         repo: openstack/instack-undercloud
     version: 7.4.11
+  - projects:
+      - hash: d30ffb45217e90e234f9cfebc5ead9335ff7129f
+        repo: openstack/instack-undercloud
+    version: 7.4.12
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/instack-undercloud/pike.html
