--- a/deliverables/pike/os-net-config.yaml
+++ b/deliverables/pike/os-net-config.yaml
@@ -46,6 +46,10 @@ releases:
       - hash: 137abf0138f538d79b79c4aefef03e290cba808e
         repo: openstack/os-net-config
     version: 7.3.5
+  - projects:
+      - hash: e401e784c8f9523a9b2ee3e47e5676e976bd43c5
+        repo: openstack/os-net-config
+    version: 7.3.6
 team: tripleo
 type: other
 repository-settings:
