--- a/deliverables/pike/puppet-tripleo.yaml
+++ b/deliverables/pike/puppet-tripleo.yaml
@@ -73,6 +73,10 @@ releases:
       - hash: 176ce286c7740de4c3a5858df84fcb33a21eb36f
         repo: openstack/puppet-tripleo
     version: 7.4.12
+  - projects:
+      - hash: e510993a5ef0855c3b314f97a24089f0753ef309
+        repo: openstack/puppet-tripleo
+    version: 7.4.13
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/puppet-tripleo/pike.html
