--- a/deliverables/pike/tripleo-common.yaml
+++ b/deliverables/pike/tripleo-common.yaml
@@ -86,6 +86,10 @@ releases:
       - hash: 78a572b0c897e98029bc1fcec8195925fb7c8f5d
         repo: openstack/tripleo-common
     version: 7.6.12
+  - projects:
+      - hash: 566b88d54f947f22efbafb8390e39bbfe8c61b2a
+        repo: openstack/tripleo-common
+    version: 7.6.13
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-common/pike.html
