--- a/deliverables/pike/tripleo-heat-templates.yaml
+++ b/deliverables/pike/tripleo-heat-templates.yaml
@@ -79,6 +79,10 @@ releases:
       - hash: 3f6e572279d66efd1081dd0ec4c39a5ef6be4a35
         repo: openstack/tripleo-heat-templates
     version: 7.0.12
+  - projects:
+      - hash: b4d2c3892e264ad5e50c90c9b094d66e4eefd23d
+        repo: openstack/tripleo-heat-templates
+    version: 7.0.13
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-heat-templates/pike.html
