--- a/deliverables/pike/tripleo-validations.yaml
+++ b/deliverables/pike/tripleo-validations.yaml
@@ -62,6 +62,10 @@ releases:
       - hash: 11a6a9372ba2720b671e1e9ddd5ff19baa69ad06
         repo: openstack/tripleo-validations
     version: 7.4.9
+  - projects:
+      - hash: 578618e4c7598d3282c14c49cc341d14f4cb174f
+        repo: openstack/tripleo-validations
+    version: 7.4.10
 team: tripleo
 type: other
 release-notes: https://docs.openstack.org/releasenotes/tripleo-validations/pike.html
