TripleO queens release
Change-Id: If3e17f5577f051b91301b6b848f49f210d265599

--- a/deliverables/queens/instack-undercloud.yaml
+++ b/deliverables/queens/instack-undercloud.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 6bcc660e3a6a4a4febf9b0d1c3e10307a2734833
         repo: openstack/instack-undercloud
     version: 8.4.1
+  - projects:
+      - hash: 0b94f102704728071cf662ec5951075f429937b6
+        repo: openstack/instack-undercloud
+    version: 8.4.2
 repository-settings:
   openstack/instack-undercloud: {}
 branches:
