--- a/deliverables/queens/os-net-config.yaml
+++ b/deliverables/queens/os-net-config.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 08a0f081bf627ef09b934b2cc1dc66e172a1dbd4
         repo: openstack/os-net-config
     version: 8.4.1
+  - projects:
+      - hash: e78b09635c424b62b22ee7f19e36abfc71348b21
+        repo: openstack/os-net-config
+    version: 8.4.2
 repository-settings:
   openstack/os-net-config: {}
 branches:
