--- a/deliverables/queens/puppet-tripleo.yaml
+++ b/deliverables/queens/puppet-tripleo.yaml
@@ -28,6 +28,10 @@ releases:
       - hash: 37e6df17c00c0311701829e52803f7fab1e2f6be
         repo: openstack/puppet-tripleo
     version: 8.3.2
+  - projects:
+      - hash: 3cfef05eeeb922042a551b5133f6a1c23cd19746
+        repo: openstack/puppet-tripleo
+    version: 8.3.3
 repository-settings:
   openstack/puppet-tripleo: {}
 branches:
