--- a/deliverables/queens/python-tripleoclient.yaml
+++ b/deliverables/queens/python-tripleoclient.yaml
@@ -32,6 +32,10 @@ releases:
       - hash: d6f2872ef70f8aeab7740f3c1252cd16d4c0d3ea
         repo: openstack/python-tripleoclient
     version: 9.2.1
+  - projects:
+      - hash: c7b7b4e3dcd34f9e51686065e328e73556967bab
+        repo: openstack/python-tripleoclient
+    version: 9.2.2
 release-notes: https://docs.openstack.org/releasenotes/python-tripleoclient/queens.html
 repository-settings:
   openstack/python-tripleoclient: {}
