--- a/deliverables/queens/tripleo-common.yaml
+++ b/deliverables/queens/tripleo-common.yaml
@@ -37,6 +37,10 @@ releases:
       - hash: 34243812f15bc35caeadabcaf660c36c23b173ba
         repo: openstack/tripleo-common
     version: 8.6.1
+  - projects:
+      - hash: 4279b1b5ab518324132fa2b6ea700345cd6f3617
+        repo: openstack/tripleo-common
+    version: 8.6.2
 cycle-highlights:
   - |
     config-download: Ability to use Ansible to apply the cloud configuration.
