--- a/deliverables/queens/tripleo-heat-templates.yaml
+++ b/deliverables/queens/tripleo-heat-templates.yaml
@@ -38,6 +38,10 @@ releases:
       - hash: 7235d2a58d7e58d22af4a93261f5aa96e71cf241
         repo: openstack/tripleo-heat-templates
     version: 8.0.2
+  - projects:
+      - hash: 3570a94a69e05af23cee11fbfaf3822538f75023
+        repo: openstack/tripleo-heat-templates
+    version: 8.0.3
 repository-settings:
   openstack/tripleo-heat-templates: {}
 branches:
