--- a/deliverables/queens/tripleo-puppet-elements.yaml
+++ b/deliverables/queens/tripleo-puppet-elements.yaml
@@ -26,6 +26,10 @@ releases:
       - hash: dabb361b2669c4420c1f6a1f77b0ce76a08f93a5
         repo: openstack/tripleo-puppet-elements
     version: 8.0.0
+  - projects:
+      - hash: e78ac476394f3dd3f7bc13ce31896f76711e9811
+        repo: openstack/tripleo-puppet-elements
+    version: 8.0.1
 repository-settings:
   openstack/tripleo-puppet-elements: {}
 branches:
