--- a/deliverables/queens/tripleo-validations.yaml
+++ b/deliverables/queens/tripleo-validations.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: d93fb6357f3db5f571f8c4b81405083d96c685b8
         repo: openstack/tripleo-validations
     version: 8.4.1
+  - projects:
+      - hash: c6f61b2a4489e3b3d1e0bfd224e2f87c27a36e86
+        repo: openstack/tripleo-validations
+    version: 8.4.2
 repository-settings:
   openstack/tripleo-validations: {}
 branches:
