--- a/deliverables/_independent/openstackdocstheme.yaml
+++ b/deliverables/_independent/openstackdocstheme.yaml
@@ -132,5 +132,9 @@ releases:
       - hash: bbc7a2a2e1792040a48f172e7dba65f6c4113506
         repo: openstack/openstackdocstheme
     version: 1.20.1
+  - projects:
+      - hash: a750f2a46557bde5188b40c303e3a1f426611984
+        repo: openstack/openstackdocstheme
+    version: 1.21.0
 repository-settings:
   openstack/openstackdocstheme: {}
