--- a/deliverables/queens/cinder.yaml
+++ b/deliverables/queens/cinder.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: bc76abef28b34723abdbd29881553a1af94b024b
         repo: openstack/cinder
     version: 12.0.1
+  - projects:
+      - hash: d8d9e1cce7e0fc0170b7b195ecc4ee09e10b0774
+        repo: openstack/cinder
+    version: 12.0.2
 cycle-highlights:
   - 'Support for attaching a single Cinder volume to multile VM instances.'
   - 'Add ability to report backend state in service list.'
