--- a/deliverables/queens/os-brick.yaml
+++ b/deliverables/queens/os-brick.yaml
@@ -29,6 +29,10 @@ releases:
       - hash: 773fad170f0841f52131e1a547c18c8c36591f65
         repo: openstack/os-brick
     version: 2.3.1
+  - projects:
+      - hash: 8fab1a01cb03155e05f8a9211b152a4938474575
+        repo: openstack/os-brick
+    version: 2.3.2
 branches:
   - name: stable/queens
     location: 2.3.0
