--- a/deliverables/rocky/cliff.yaml
+++ b/deliverables/rocky/cliff.yaml
@@ -6,3 +6,8 @@ team: OpenStackClient
 type: library
 repository-settings:
   openstack/cliff: {}
+releases:
+  - projects:
+      - hash: 5e4b3bedc073bed61716ae7e47780d8192a1c34f
+        repo: openstack/cliff
+    version: 2.12.0
