Oslo releases for 2018-5-30
Change-Id: Ie6ac5a1422bae84f15516de898e1a766a5b51399

--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 3503cf687e200fa98cf009a874c2f258a161f5a5
         repo: openstack/oslo.messaging
     version: 6.2.0
+  - projects:
+      - hash: fe6e031be3e9b34680637f5ce67a02eedfd814d9
+        repo: openstack/oslo.messaging
+    version: 6.3.0
