--- a/deliverables/rocky/oslo.policy.yaml
+++ b/deliverables/rocky/oslo.policy.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 9161a90ef4a20a6f996c99f5871ca7691ebd6a02
         repo: openstack/oslo.policy
     version: 1.35.0
+  - projects:
+      - hash: ba836f2d409ecab61103cf859446c12322f99952
+        repo: openstack/oslo.policy
+    version: 1.36.0
