--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: d9b09a58d5954d1cbd5f689236438e6ce7ecf542
         repo: openstack/oslo.vmware
     version: 2.29.0
+  - projects:
+      - hash: 984efbdfd2e765ba5a82c7a8c496c0e202b2e96f
+        repo: openstack/oslo.vmware
+    version: 2.29.1
