--- a/deliverables/rocky/oslotest.yaml
+++ b/deliverables/rocky/oslotest.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 325d0c17a4d406c417d5717826d71cf188262676
         repo: openstack/oslotest
     version: 3.4.2
+  - projects:
+      - hash: 2dc5678f4fbe69fc5615f5f796def5761561a043
+        repo: openstack/oslotest
+    version: 3.5.0
