--- a/deliverables/rocky/osprofiler.yaml
+++ b/deliverables/rocky/osprofiler.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 113a2dddddf6a67d0a2b69d94eef325e39520ac8
         repo: openstack/osprofiler
     version: 2.0.0
+  - projects:
+      - hash: e1ba98e13a598f2df7d3f18376680e372adc309d
+        repo: openstack/osprofiler
+    version: 2.1.0
