--- a/deliverables/rocky/neutron-lib.yaml
+++ b/deliverables/rocky/neutron-lib.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/neutron-lib
         hash: b34d0e94b383f97dc16672c62bed123eab0ef787
+  - version: 1.15.0
+    projects:
+      - repo: openstack/neutron-lib
+        hash: 55e0a3c7dda5c93368315d041fcc07f0f4887c12
 repository-settings:
   openstack/neutron-lib: {}
