nova: release pike 16.1.4
Depends-On: https://review.openstack.org/571427

Change-Id: Ie2ae9486e530d45b93c82b1ff1864d363ff40e65

--- a/deliverables/pike/nova.yaml
+++ b/deliverables/pike/nova.yaml
@@ -65,5 +65,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: 57c28a379ff6b998953d92983d3be53db3618b69
+  - projects:
+      - hash: 43cac615f6a0a4399c7bf3dda6c2595749f27ace
+        repo: openstack/nova
+    version: 16.1.4
 repository-settings:
   openstack/nova: {}
