--- a/deliverables/ocata/cinder.yaml
+++ b/deliverables/ocata/cinder.yaml
@@ -60,5 +60,9 @@ releases:
       - hash: 486c00794b1401077bd0c9a6071135c149382958
         repo: openstack/cinder
     version: 10.0.6
+  - projects:
+      - hash: 921070a5fe6746ec10f7c1103d3ef47ac30a7ff8
+        repo: openstack/cinder
+    version: 10.0.7
 repository-settings:
   openstack/cinder: {}
