--- a/deliverables/ocata/nova.yaml
+++ b/deliverables/ocata/nova.yaml
@@ -77,5 +77,9 @@ releases:
     projects:
       - repo: openstack/nova
         hash: a0bcc6bda09c5dff4bf0ba57b80ebb94f01567f0
+  - projects:
+      - hash: 7af016cd02d2268b55ebd125678a01b7ef4f883f
+        repo: openstack/nova
+    version: 15.1.3
 repository-settings:
   openstack/nova: {}
