--- a/deliverables/_independent/yaml2ical.yaml
+++ b/deliverables/_independent/yaml2ical.yaml
@@ -40,5 +40,9 @@ releases:
       - hash: 6e498abcb6acb8d14809f757abfd85e8ab5b5c1f
         repo: openstack-infra/yaml2ical
     version: 0.8.0
+  - projects:
+      - hash: 0d1125f618c3c9954714e67c2c09827f18990c0d
+        repo: openstack-infra/yaml2ical
+    version: 0.8.1
 repository-settings:
   openstack-infra/yaml2ical: {}
