--- a/deliverables/pike/django_openstack_auth.yaml
+++ b/deliverables/pike/django_openstack_auth.yaml
@@ -25,6 +25,10 @@ releases:
     projects:
       - repo: openstack/django_openstack_auth
         hash: 4973ee1f00d008e49c41d19fb4257c1e241f5826
+  - version: 3.6.1
+    projects:
+      - repo: openstack/django_openstack_auth
+        hash: ddcfe7a6d4db1b476254b556057756eadd7b097d
 branches:
   - name: stable/pike
     location: 3.5.0
