--- a/deliverables/queens/python-magnumclient.yaml
+++ b/deliverables/queens/python-magnumclient.yaml
@@ -13,6 +13,10 @@ releases:
       - hash: 13858668f0ffaf98fb6f186b4fe955a5d23eb30b
         repo: openstack/python-magnumclient
     version: 2.9.0
+  - projects:
+      - hash: 40327b75edcab608e9c9d9ac0993855de088926b
+        repo: openstack/python-magnumclient
+    version: 2.9.1
 branches:
   - location: 2.8.0
     name: stable/queens
