--- a/deliverables/rocky/python-masakariclient.yaml
+++ b/deliverables/rocky/python-masakariclient.yaml
@@ -3,5 +3,10 @@ launchpad: python-masakariclient
 release-model: cycle-with-intermediary
 team: masakari
 type: client-library
+releases:
+  - version: 5.1.0
+    projects:
+      - repo: openstack/python-masakariclient
+        hash: 6d61f0a103576b36b1896caf19fb2d5f72ec6d9c
 repository-settings:
   openstack/python-masakariclient: {}
