--- a/deliverables/rocky/python-blazarclient.yaml
+++ b/deliverables/rocky/python-blazarclient.yaml
@@ -6,3 +6,8 @@ team: blazar
 type: client-library
 repository-settings:
   openstack/python-blazarclient: {}
+releases:
+  - version: 1.1.0
+    projects:
+      - repo: openstack/python-blazarclient
+        hash: 122ca0844c51e693f294279a40a454a3e61b995e
