--- a/deliverables/rocky/blazar.yaml
+++ b/deliverables/rocky/blazar.yaml
@@ -10,3 +10,7 @@ releases:
     projects:
       - repo: openstack/blazar
         hash: 038e5e9b1bde00015b92e2b68b2f88e166bfc810
+  - version: 2.0.0.0b2
+    projects:
+      - repo: openstack/blazar
+        hash: 29e68d829535650e142f8a228cb016e82917979d
