--- a/deliverables/queens/oslo.utils.yaml
+++ b/deliverables/queens/oslo.utils.yaml
@@ -33,6 +33,10 @@ releases:
       - hash: a449545a196c6940e56fd1e319b96f85f588ba0d
         repo: openstack/oslo.utils
     version: 3.35.0
+  - projects:
+      - hash: 8cce3af2c29753d1d1794083a468c7b07b78473c
+        repo: openstack/oslo.utils
+    version: 3.35.1
 branches:
   - name: stable/queens
     location: 3.35.0
