--- a/deliverables/ocata/oslo.utils.yaml
+++ b/deliverables/ocata/oslo.utils.yaml
@@ -41,5 +41,9 @@ releases:
       - hash: 229a1690bbfe554e84e63bff9e7e3ce3bef1126f
         repo: openstack/oslo.utils
     version: 3.22.2
+  - projects:
+      - hash: edf2e78cc809aeff7dc4fb4b87df2a4c1ebde753
+        repo: openstack/oslo.utils
+    version: 3.22.3
 repository-settings:
   openstack/oslo.utils: {}
