--- a/deliverables/pike/oslo.utils.yaml
+++ b/deliverables/pike/oslo.utils.yaml
@@ -43,6 +43,10 @@ releases:
       - hash: 464a73d87f34eb2055c5ebfd1c3dcb418b4e75dc
         repo: openstack/oslo.utils
     version: 3.28.2
+  - projects:
+      - hash: 2c8452a42ef58e0352883512d1ecf724ae1dcdd5
+        repo: openstack/oslo.utils
+    version: 3.28.3
 team: oslo
 type: library
 repository-settings:
