TripleO rocky release
Change-Id: Ib202d9be0ef80240dc05a7e07f91a9d82b673a72

--- a/deliverables/rocky/instack-undercloud.yaml
+++ b/deliverables/rocky/instack-undercloud.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: aa453c7c78b6b9dbefe3470b4588a66b8cff57f6
         repo: openstack/instack-undercloud
     version: 9.0.0
+  - projects:
+      - hash: 41c401ca65ff32b2a3a1cdd07aabfdcc1bc508ab
+        repo: openstack/instack-undercloud
+    version: 9.1.0
