--- a/deliverables/rocky/puppet-tripleo.yaml
+++ b/deliverables/rocky/puppet-tripleo.yaml
@@ -10,3 +10,7 @@ releases:
       - hash: c5131729e762535e8ec778432e84d82238168388
         repo: openstack/puppet-tripleo
     version: 9.0.0
+  - projects:
+      - hash: e1ecbb129c8447ed388c1463307417997d63fd94
+        repo: openstack/puppet-tripleo
+    version: 9.1.0
