--- a/deliverables/rocky/python-tripleoclient.yaml
+++ b/deliverables/rocky/python-tripleoclient.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 9a926ae699729c00d5918ee0903861c2bb0c5d20
         repo: openstack/python-tripleoclient
     version: 10.1.0
+  - projects:
+      - hash: 9680a19dc9752037d69917e3be6863b68d78db4c
+        repo: openstack/python-tripleoclient
+    version: 10.2.0
