--- a/deliverables/rocky/tripleo-common.yaml
+++ b/deliverables/rocky/tripleo-common.yaml
@@ -15,3 +15,7 @@ releases:
       - hash: 4de70a5314e58bd543c732a2e80a5ebbe353ef79
         repo: openstack/tripleo-common
     version: 9.0.1
+  - projects:
+      - hash: cd1dd6aa834b05b3e4822088108cd9c6ab0b9d27
+        repo: openstack/tripleo-common
+    version: 9.1.0
