--- a/deliverables/rocky/tripleo-image-elements.yaml
+++ b/deliverables/rocky/tripleo-image-elements.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 950a63f77c8c9da9ce6c7fccb80fabd980a4e4bc
         repo: openstack/tripleo-image-elements
     version: 9.0.0.0b1
+  - projects:
+      - hash: 2ac38dd68c6ff77ae95d3247316ff251e56a55bc
+        repo: openstack/tripleo-image-elements
+    version: 9.0.0.0b2
