--- a/deliverables/rocky/tripleo-puppet-elements.yaml
+++ b/deliverables/rocky/tripleo-puppet-elements.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 44331f2cb20ee06e0c00e3798dc99648cb9811fc
         repo: openstack/tripleo-puppet-elements
     version: 9.0.0.0b1
+  - projects:
+      - hash: 939b5861e1ff2f5311a16ccf4c63922493159f56
+        repo: openstack/tripleo-puppet-elements
+    version: 9.0.0.0b2
