--- a/deliverables/rocky/tripleo-ui.yaml
+++ b/deliverables/rocky/tripleo-ui.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 82af407be31b74adbdc39be5535d6bd0510fc620
         repo: openstack/tripleo-ui
     version: 9.0.0
+  - projects:
+      - hash: 041b46f948f9cbf22d828f6d278489bbc53143d2
+        repo: openstack/tripleo-ui
+    version: 9.1.0
