--- a/deliverables/rocky/tripleo-validations.yaml
+++ b/deliverables/rocky/tripleo-validations.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 70ba8b5cb64c74da66da2425ad7bd4f48d0c3dec
         repo: openstack/tripleo-validations
     version: 9.0.0
+  - projects:
+      - hash: 96e3bee57e6977ac9d5c267ad15ccc548d4bb0a3
+        repo: openstack/tripleo-validations
+    version: 9.1.0
