--- a/deliverables/rocky/instack.yaml
+++ b/deliverables/rocky/instack.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 334137855e4f7fd8b5f3d201f7876fed35721bc1
         repo: openstack/instack
     version: 9.0.0
+  - projects:
+      - hash: 1dca54c838b759eab1ae7c49871e2bba85dae06c
+        repo: openstack/instack
+    version: 9.1.0
