--- a/deliverables/rocky/tripleo-heat-templates.yaml
+++ b/deliverables/rocky/tripleo-heat-templates.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: 628cd0e3909391e7c21711e0ab2ffd0db66ef942
         repo: openstack/tripleo-heat-templates
     version: 9.0.0.0b2
+  - projects:
+      - hash: 837a58df1a1eb9fd45f624b765681bbc06aa2ba9
+        repo: openstack/tripleo-heat-templates
+    version: 9.0.0.0b3
