Oslo releases for 2018-6-5
Change-Id: Ibcc81b8cfe820101a5142c710efd495827bb1221

--- a/deliverables/rocky/oslo.context.yaml
+++ b/deliverables/rocky/oslo.context.yaml
@@ -6,3 +6,8 @@ team: oslo
 type: library
 repository-settings:
   openstack/oslo.context: {}
+releases:
+  - projects:
+      - hash: b1ba490ac5520f34f560b1be9290f020f6c8e2e7
+        repo: openstack/oslo.context
+    version: 2.21.0
