--- a/deliverables/rocky/oslo.policy.yaml
+++ b/deliverables/rocky/oslo.policy.yaml
@@ -19,3 +19,7 @@ releases:
       - hash: ba836f2d409ecab61103cf859446c12322f99952
         repo: openstack/oslo.policy
     version: 1.36.0
+  - projects:
+      - hash: 7a50c85a384a3fa4711c25153f7ce55982f35e22
+        repo: openstack/oslo.policy
+    version: 1.37.0
