--- a/deliverables/rocky/oslo.serialization.yaml
+++ b/deliverables/rocky/oslo.serialization.yaml
@@ -11,3 +11,7 @@ releases:
       - hash: cf0e11a4c91c2ad113bcfb458f61c3c5e08e0bb9
         repo: openstack/oslo.serialization
     version: 2.25.0
+  - projects:
+      - hash: bd10ae04a1e54be2c3817e6bdd5323d1fc59e99a
+        repo: openstack/oslo.serialization
+    version: 2.26.0
