--- a/deliverables/rocky/oslo.vmware.yaml
+++ b/deliverables/rocky/oslo.vmware.yaml
@@ -23,3 +23,7 @@ releases:
       - hash: 984efbdfd2e765ba5a82c7a8c496c0e202b2e96f
         repo: openstack/oslo.vmware
     version: 2.29.1
+  - projects:
+      - hash: f69970eeee1696a111f8adde62f145274300319d
+        repo: openstack/oslo.vmware
+    version: 2.29.2
