--- a/deliverables/_independent/pbr.yaml
+++ b/deliverables/_independent/pbr.yaml
@@ -88,5 +88,9 @@ releases:
       - hash: f30aa7a97f0a41a10da7f84a19faef0b4d0f77f5
         repo: openstack-dev/pbr
     version: 4.0.3
+  - projects:
+      - hash: ee26945cb3b290983a4b6d71bec2ed5aaf163989
+        repo: openstack-dev/pbr
+    version: 4.0.4
 repository-settings:
   openstack-dev/pbr: {}
