--- a/deliverables/rocky/oslo.messaging.yaml
+++ b/deliverables/rocky/oslo.messaging.yaml
@@ -27,3 +27,7 @@ releases:
       - hash: fe6e031be3e9b34680637f5ce67a02eedfd814d9
         repo: openstack/oslo.messaging
     version: 6.3.0
+  - projects:
+      - hash: 7e4ca449a0a73b2151ad10bf38f71b48215dfffc
+        repo: openstack/oslo.messaging
+    version: 6.4.0
