--- a/deliverables/rocky/python-zunclient.yaml
+++ b/deliverables/rocky/python-zunclient.yaml
@@ -17,5 +17,9 @@ releases:
     projects:
       - repo: openstack/python-zunclient
         hash: f100f94f64a56fa25c99fc8f5689647dc49cd7f9
+  - version: 1.4.0
+    projects:
+      - repo: openstack/python-zunclient
+        hash: 5139c4682f693a8d61f5d4ff3bc9b559d2970205
 repository-settings:
   openstack/python-zunclient: {}
