--- a/deliverables/rocky/congress.yaml
+++ b/deliverables/rocky/congress.yaml
@@ -8,5 +8,9 @@ releases:
     projects:
       - repo: openstack/congress
         hash: 5854127932426f618db43112a546d75cbf424b2e
+  - version: 8.0.0.0b2
+    projects:
+      - repo: openstack/congress
+        hash: 8dbe637913142941597b6789c65cb402b6a7df82
 repository-settings:
   openstack/congress: {}
