Tag congress-dashboard R2
Change-Id: Id107f1d9c23f3e9370e97488f2a59f2fedb615ff

--- a/deliverables/rocky/congress-dashboard.yaml
+++ b/deliverables/rocky/congress-dashboard.yaml
@@ -9,5 +9,9 @@ releases:
     projects:
       - repo: openstack/congress-dashboard
         hash: 9d0a305c7f405358c94cc8a2986c17e48ddf03ee
+  - version: 3.0.0.0b2
+    projects:
+      - repo: openstack/congress-dashboard
+        hash: 1f9b10ba3c9d9eba9bea4fad6a1231865f6361e1
 repository-settings:
   openstack/congress-dashboard: {}
